--- a/ms_gestion_pro.properties
+++ b/ms_gestion_pro.properties
@@ -1,3 +1,3 @@
-cliente.property=Cliente Profile Produccion
-spring.datasource.url=jdbc:postgresql://localhost:5432/ingresoDB
-
+cliente.property= Cliente Profile Produccion
+spring.datasource.url= jdbc:postgresql://localhost:5432/ingresoDB
+spring.datasource.dbcp2.driver-class-name=org.postgresql.Driver
