--- a/ms_gestion_pro.properties
+++ b/ms_gestion_pro.properties
@@ -2,3 +2,20 @@ cliente.property= Cliente Profile Produccion
 spring.datasource.url=jdbc:postgresql://localhost:5432/ingresoDB
 spring.datasource.username=postgres
 spring.datasource.password=Uisrael
+
+spring.datasource.dbcp2.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+logging.level.org.hibernate.sql=debug
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
+
+
+
+spring.application.name=MS_GESTION
+server.port=0
+eureka.instance.instance-id= ${spring.application.name}:${random.uuid}
+spring.config.import=optional:configserver:http://localhost:8888
