--- a/ms_gestion_pro.properties
+++ b/ms_gestion_pro.properties
@@ -1,4 +1,4 @@
-cliente.property= Cliente Profile Produccion
+cliente.property= Gestion Profile Produccion
 spring.datasource.url=jdbc:postgresql://localhost:5432/ingresoDB
 spring.datasource.username=postgres
 spring.datasource.password=Uisrael
